2005-12-03  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* splitlines.sh: New file
	* Makefile, README: + splitlines.sh added

	* mpd-show.c: + -c option added

	* mpd-show.c: + -b and -B options added
	+ iconv added
	+ signals added
	+ print_song() corrected a bit
	+ diff_song() compares bar length instead of pos

2005-12-29  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* extractlinks.pl: + may specify several urls now
	+ assumes file:// and converts rel2abs if needed
	* TODO: + extractlinks.pl entry altered

	* getlyrics.pl: + an alternate arguments supported
	+ 2 empty lines added after header
	* TODO: + getlyrics.pl entry removed

2005-12-25  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* mp3rip: + --pipe added
	* quotes.txt: + quote about chamster and uear -= 42 added
	+ a few 'bugs' fixed

2005-12-23  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* Makefile: + drun symlink creating fixed
	* null.c: + license changed
	* null.sh: + works like null.c

	* check.sh: + ported to other shells
	+ --long-help added with examples
	+ suports options as separate arguments to short options (eg. -i 10)
	+ check_proc_load()  and  check_proc()  added
	+ hech* aliases added

2005-11-27  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* Makefile, README, null.c: + null's daemonize feature
	+ drun added

2005-11-20  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* gz2bz: + bug fixed

2005-11-22  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* xgetclass.c: + license changed to AFL

	* FvwmTransFocus.c: + prints short error messages
	+ performs simple WM_CLASS tests
	+ license changed to GNU GPL

	* gz2bz: New file
	* Makefile, README: + gz2bz added

	* malloc.c: + nice progress bar
	+ accepts unit in argument (eg. 10M)
	+ code cleaned up
	* TODO: + malloc entry removed

	* xgetclass.c: New file
	* Makefile, README: + xgetclass added

2005-11-17  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* check.sh: + chec.sh -> check.sh in --help screen

2005-11-16  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* mp3rip: New file